# collision-model

./: .gitignore  CMakeLists.txt  interact.md  package.xml  plan.md  prepare_deploy.ps1  requirements_robot.txt  test_floor_detection.py  train_supervised.py  training_supplement.md
docs/: data_augmentation_guide.md  data_cleaning.md  plan.md  technical_route.md  training_supplement.md
launch/: navigation.launch  run_inference.launch
scripts/: build_dataset.py  data_cleaner.py  data_collector.py  inference_node.py  navigation_node.py  onnx_infer_demo.py  send_goal.py
train/: evaluate.py  export_onnx.py  models.py  smoke_test_models.py  train_ann.py  train_voa.py
